deploy/k8s/overlays/openshift/umami/common/umami-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: umami
  labels:
    app.kubernetes.io/component: umami-web
    app.kubernetes.io/instance: umami
    app.kubernetes.io/name: umami
    app.kubernetes.io/part-of: umami
spec:
  port:
    targetPort: 3001
  tls:
    termination: edge
  to:
    kind: Service
    name: umami
    weight: 100
  wildcardPolicy: None
